--- a/MindTeaser/Base.lproj/Main.storyboard
+++ b/MindTeaser/Base.lproj/Main.storyboard
@@ -28,28 +28,41 @@
                                     <constraint firstAttribute="height" constant="189" id="q37-zd-R7x"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mpt-d9-L2F">
-                                <rect key="frame" x="272" y="260" width="224" height="35"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mpt-d9-L2F" customClass="CustomTextField" customModule="MindTeaser" customModuleProvider="target">
+                                <rect key="frame" x="272" y="260" width="224" height="40"/>
+                                <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="55n-a0-sa2"/>
+                                    <constraint firstAttribute="height" constant="40" id="55n-a0-sa2"/>
                                     <constraint firstAttribute="width" constant="224" id="v89-yi-N9l"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="inset">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gJa-kW-r0q">
-                                <rect key="frame" x="272" y="330" width="224" height="35"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gJa-kW-r0q" customClass="CustomTextField" customModule="MindTeaser" customModuleProvider="target">
+                                <rect key="frame" x="272" y="335" width="224" height="40"/>
+                                <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="224" id="ZQs-PE-3ZP"/>
-                                    <constraint firstAttribute="height" constant="35" id="psI-ph-UtA"/>
+                                    <constraint firstAttribute="height" constant="40" id="psI-ph-UtA"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="inset">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BnZ-Ap-UYD">
-                                <rect key="frame" x="312" y="400" width="144" height="45"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BnZ-Ap-UYD" customClass="CustomButton" customModule="MindTeaser" customModuleProvider="target">
+                                <rect key="frame" x="312" y="410" width="144" height="45"/>
+                                <color key="backgroundColor" red="0.29979473350000002" green="0.59221667050000004" blue="1" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="7oS-Be-Lri"/>
                                     <constraint firstAttribute="width" constant="144" id="U5u-kx-4Lg"/>
