--- a/MindTeaser/Base.lproj/Main.storyboard
+++ b/MindTeaser/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad9_7" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,18 +18,18 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Brain" translatesAutoresizingMaskIntoConstraints="NO" id="1z7-vk-ee2">
-                                <rect key="frame" x="287.5" y="36" width="193" height="189"/>
+                                <rect key="frame" x="91" y="36" width="193" height="189"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="193" id="Hea-BC-n1s"/>
                                     <constraint firstAttribute="height" constant="189" id="q37-zd-R7x"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mpt-d9-L2F" customClass="CustomTextField" customModule="MindTeaser" customModuleProvider="target">
-                                <rect key="frame" x="272" y="260" width="224" height="40"/>
+                                <rect key="frame" x="75.5" y="260" width="224" height="40"/>
                                 <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="55n-a0-sa2"/>
@@ -45,7 +45,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gJa-kW-r0q" customClass="CustomTextField" customModule="MindTeaser" customModuleProvider="target">
-                                <rect key="frame" x="272" y="335" width="224" height="40"/>
+                                <rect key="frame" x="75.5" y="335" width="224" height="40"/>
                                 <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="224" id="ZQs-PE-3ZP"/>
@@ -61,13 +61,16 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BnZ-Ap-UYD" customClass="CustomButton" customModule="MindTeaser" customModuleProvider="target">
-                                <rect key="frame" x="312" y="410" width="144" height="45"/>
+                                <rect key="frame" x="115.5" y="410" width="144" height="45"/>
                                 <color key="backgroundColor" red="0.29979473350000002" green="0.59221667050000004" blue="1" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="7oS-Be-Lri"/>
                                     <constraint firstAttribute="width" constant="144" id="U5u-kx-4Lg"/>
                                 </constraints>
                                 <state key="normal" title="Login"/>
+                                <connections>
+                                    <segue destination="6LN-yv-nDW" kind="show" id="OgE-Pa-xUN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -91,6 +94,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="35.15625" y="37.5"/>
+        </scene>
+        <!--GameVC-->
+        <scene sceneID="Kp3-9h-IuN">
+            <objects>
+                <viewController id="6LN-yv-nDW" customClass="GameVC" customModule="MindTeaser" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="s0Q-Qc-U3w"/>
+                        <viewControllerLayoutGuide type="bottom" id="rZw-mD-d9q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OoB-R7-9jF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="500" horizontalCompressionResistancePriority="400" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nzc-Re-Bnx" customClass="CustomButton" customModule="MindTeaser" customModuleProvider="target">
+                                <rect key="frame" x="235" y="602" width="120" height="45"/>
+                                <color key="backgroundColor" red="0.29979473350000002" green="0.59221667050000004" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="4Z0-3o-w4b"/>
+                                    <constraint firstAttribute="width" constant="120" id="BuB-Cn-zrN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                <state key="normal" title="Start"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="400" horizontalCompressionResistancePriority="500" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QR0-Gp-6JG" customClass="CustomButton" customModule="MindTeaser" customModuleProvider="target">
+                                <rect key="frame" x="20" y="602" width="120" height="45"/>
+                                <color key="backgroundColor" red="0.29979473350000002" green="0.59221667050000004" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="tHu-BL-fs2"/>
+                                    <constraint firstAttribute="height" constant="45" id="y2C-Ty-zM5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                <state key="normal" title="No"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember this image:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcu-0A-pu6">
+                                <rect key="frame" x="101.5" y="40" width="172" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" priority="500" constant="172" id="axl-5Z-ugg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Nzc-Re-Bnx" firstAttribute="bottom" secondItem="QR0-Gp-6JG" secondAttribute="bottom" id="5D3-sj-dSS"/>
+                            <constraint firstItem="kcu-0A-pu6" firstAttribute="centerX" secondItem="OoB-R7-9jF" secondAttribute="centerX" id="7XQ-Q7-r9V"/>
+                            <constraint firstAttribute="bottom" secondItem="QR0-Gp-6JG" secondAttribute="bottom" constant="20" id="Cjj-yc-69U">
+                                <variation key="heightClass=regular-widthClass=regular" constant="80"/>
+                            </constraint>
+                            <constraint firstItem="QR0-Gp-6JG" firstAttribute="leading" secondItem="OoB-R7-9jF" secondAttribute="leading" constant="20" id="L1V-QY-aTj">
+                                <variation key="widthClass=regular" constant="80"/>
+                            </constraint>
+                            <constraint firstAttribute="trailing" secondItem="Nzc-Re-Bnx" secondAttribute="trailing" constant="20" id="OLW-TK-PJm">
+                                <variation key="widthClass=regular" constant="80"/>
+                            </constraint>
+                            <constraint firstItem="kcu-0A-pu6" firstAttribute="top" secondItem="s0Q-Qc-U3w" secondAttribute="bottom" constant="20" id="wIj-9K-lK4"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FdI-dv-Why" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="764" y="37.331334332833585"/>
         </scene>
     </scenes>
     <resources>
