--- a/MindTeaser/Card.xib
+++ b/MindTeaser/Card.xib
@@ -9,13 +9,13 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Card" customModule="MindTeaser" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="Card" customModule="MindTeaser" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grin" translatesAutoresizingMaskIntoConstraints="NO" id="8PD-cB-xGQ">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tongue" translatesAutoresizingMaskIntoConstraints="NO" id="8PD-cB-xGQ">
                     <rect key="frame" x="25" y="25" width="200" height="200"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="cjN-FW-Hyp"/>
@@ -23,18 +23,34 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="8PD-cB-xGQ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="0xH-Sx-m1k"/>
                 <constraint firstItem="8PD-cB-xGQ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="y3T-iH-A3y"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                    <real key="value" value="5"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                    <real key="value" value="15"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="shadowOffsetX">
+                    <real key="value" value="5"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                    <real key="value" value="0.25"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="shadowOffsetY">
+                    <real key="value" value="5"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <connections>
-                <outlet property="image" destination="8PD-cB-xGQ" id="zxh-mJ-Lpb"/>
+                <outlet property="imageView" destination="8PD-cB-xGQ" id="sEa-M7-RmF"/>
             </connections>
         </view>
     </objects>
     <resources>
-        <image name="grin" width="120" height="120"/>
+        <image name="tongue" width="120" height="120"/>
     </resources>
 </document>
