Wrote a timer class and managed to get it to work.

--- a/MindTeaser/Base.lproj/Main.storyboard
+++ b/MindTeaser/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -134,7 +135,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember this image:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcu-0A-pu6">
-                                <rect key="frame" x="101.5" y="90" width="172" height="21"/>
+                                <rect key="frame" x="101" y="90" width="172" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" priority="500" constant="172" id="axl-5Z-ugg"/>
                                 </constraints>
@@ -142,25 +143,43 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHE-CV-StU">
+                                <rect key="frame" x="326" y="20" width="33" height="21"/>
+                                <accessibility key="accessibilityConfiguration" label="1:00"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time remaining:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zmb-PP-5e7">
+                                <rect key="frame" x="195.5" y="20" width="122.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="xHE-CV-StU" firstAttribute="leading" secondItem="zmb-PP-5e7" secondAttribute="trailing" constant="8" id="3k4-BE-gsh"/>
                             <constraint firstItem="Nzc-Re-Bnx" firstAttribute="bottom" secondItem="QR0-Gp-6JG" secondAttribute="bottom" id="5D3-sj-dSS"/>
                             <constraint firstItem="kcu-0A-pu6" firstAttribute="centerX" secondItem="OoB-R7-9jF" secondAttribute="centerX" id="7XQ-Q7-r9V"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xHE-CV-StU" secondAttribute="trailing" id="CAR-zk-2YR"/>
                             <constraint firstAttribute="bottom" secondItem="QR0-Gp-6JG" secondAttribute="bottom" constant="20" id="Cjj-yc-69U">
                                 <variation key="heightClass=regular-widthClass=regular" constant="80"/>
                             </constraint>
+                            <constraint firstItem="xHE-CV-StU" firstAttribute="top" secondItem="s0Q-Qc-U3w" secondAttribute="bottom" id="ETB-hH-yty"/>
                             <constraint firstItem="QR0-Gp-6JG" firstAttribute="leading" secondItem="OoB-R7-9jF" secondAttribute="leading" constant="20" id="L1V-QY-aTj">
                                 <variation key="widthClass=regular" constant="80"/>
                             </constraint>
                             <constraint firstAttribute="trailing" secondItem="Nzc-Re-Bnx" secondAttribute="trailing" constant="20" id="OLW-TK-PJm">
                                 <variation key="widthClass=regular" constant="80"/>
                             </constraint>
+                            <constraint firstItem="xHE-CV-StU" firstAttribute="top" secondItem="zmb-PP-5e7" secondAttribute="top" id="XyC-Lc-9K9"/>
                             <constraint firstItem="kcu-0A-pu6" firstAttribute="top" secondItem="s0Q-Qc-U3w" secondAttribute="bottom" constant="70" id="wIj-9K-lK4"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="noBtn" destination="QR0-Gp-6JG" id="Igy-PR-Xmz"/>
+                        <outlet property="remainingTimeLabel" destination="xHE-CV-StU" id="hZi-3I-0cJ"/>
                         <outlet property="titleLabel" destination="kcu-0A-pu6" id="MdC-EQ-O2J"/>
                         <outlet property="yesBtn" destination="Nzc-Re-Bnx" id="GBt-Ag-xps"/>
                     </connections>
